src/test/ui/invalid/invalid-debugger-visualizer-option.rs
#![feature(debugger_visualizer)]
#![debugger_visualizer(random_file = "../foo.random")] //~ ERROR invalid argument

fn main() {}
